# tap

./: .gitignore  CMakeLists.txt  README.md  client_main.cpp  server_main.cpp
ast/: CMakeLists.txt  array_element_expression.h  array_pair_expression.h  assignment_expression.h  ast_decls.h  ast_node.h  binary_op_expression.h  block_statement.cpp  block_statement.h  break_statement.h  case_statement.h  catch_statement.h  class_constant_expression.h  class_constant_statement.h  class_statement.cpp  class_statement.h  class_variable_statement.cpp  class_variable_statement.h  closure_expression.h  constant_expression.h  construct.h  continue_statement.h  do_statement.h  dynamic_function_call.h  dynamic_variable.h  echo_statement.h  encaps_list_expression.h  exp_statement.h  expression.h  expression_list.h  finally_statement.h  for_each_statement.h  for_statement.h  function_call.h  function_statement.cpp  function_statement.h  if_branch_statement.h  if_statement.h  include_expression.h  interface_statement.cpp  (+24 more)
client/: CMakeLists.txt
db/: CMakeLists.txt  db.cpp  db.h
doc/: dev_guide.md
entity/: CMakeLists.txt  class_repo.cpp  class_repo.h  clazz.cpp  clazz.h  const.h  const_alias.cpp  const_alias.h  function.h  global_function_table.cpp  global_function_table.h  internal_const.cpp  internal_const.h  internal_function.cpp  internal_function.h  property.h  special_function.cpp  special_function.h  visibility.h
parser/: CMakeLists.txt  ast_builder.cpp  ast_builder.h  hphp.5.output  hphp.5.tab.cpp  hphp.5.tab.hpp  hphp.ll  hphp.tab.hpp  hphp.y  location.h  make-parser.sh  parser.cpp  parser.h  parser_exception.h  scanner.cpp  scanner.h  statement_info.h
server/: CMakeLists.txt  config.cpp  config.h  path_walker.cpp  path_walker.h
test/: run_test.py
type/: CMakeLists.txt  any_tap_type.h  collection_tap_type.cpp  collection_tap_type.h  custom_tap_type.cpp  custom_tap_type.h  mixed_tap_type.h  primitive_tap_type.cpp  primitive_tap_type.h  single_tap_type.cpp  single_tap_type.h  tap_type.h  type_utils.cpp  type_utils.h  union_tap_type.cpp  union_tap_type.h  unresolved_type.h  void_tap_type.h
util/: CMakeLists.txt  assert_utils.cpp  assert_utils.h  doc_comment_parser.cpp  doc_comment_parser.h  (+5 more)
(+78 files in other folders)
